config/kubernetes/mongo.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - image: launcher.gcr.io/google/mongodb3
        name: mongo
        ports:
        - containerPort: 27017
