config/kubernetes/redis.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: launcher.gcr.io/google/redis3:latest
        ports:
        - containerPort: 6379
